engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__misalignment_policy_violation_remote.snap
---
source: tui/src/chatwidget/tests/misalignment_policy_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Chat stopped as a precaution
  We couldn’t confirm the agent was acting safely and following your
  instructions. To continue working, start or resume another chat.


› 1. New chat
  2. Agent command center
  3. Resume another chat
